--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ ul {
   height: 70px;
   width: 100%;
   background-color: var(--spotify-upgrade-top);
+  overflow: hidden;
 }
 
 .main {
@@ -372,6 +373,7 @@ button {
 .save i {
   padding: 0 0.2rem;
   color: var(--spotify-grey);
+  display: flex;
 }
 
 .center {
@@ -396,15 +398,16 @@ button {
   background-color: var(--spotify-grey);
   border-radius: 10px;
   height: 4px;
+  margin: auto;
 }
 
 #song {
-  width: 100%;
+  width: 70%;
   position: relative;
 }
 
 #volume {
-  width: 100%;
+  width: 70%;
 }
 
 .time {
@@ -436,7 +439,7 @@ button {
 .seconds {
   border: 3px solid white;
   border-radius: 10px;
-  width: 20%;
+  width: 30%;
   position: absolute;
   top: 0;
   left: 0;
@@ -451,7 +454,7 @@ button {
 
 .left,
 .right {
-  width: 20%;
+  width: 250px;
 }
 
 @media screen and (max-width: 992px) {
@@ -597,6 +600,18 @@ button {
   .save {
     display: block;
   }
+
+  .save i {
+    padding: 0.2rem 0;
+  }
+
+  .album img {
+    display: none;
+  }
+
+  .left {
+    justify-content: space-between;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -623,7 +638,9 @@ button {
   .top_left h4,
   .playlist li,
   .new_playlist i,
-  hr {
+  hr,
+  .download span,
+  .user h4 {
     display: none;
   }
 
@@ -634,5 +651,21 @@ button {
   #download,
   .user img {
     margin: 0.5rem auto;
+  }
+
+  .left,
+  .right {
+    width: 150px;
+  }
+
+  #volume,
+  .save,
+  .listen .fa-desktop,
+  .listen .fa-volume-high {
+    display: none;
+  }
+
+  .center {
+    width: calc(100% - 350px);
   }
 }
